# Point-Cloud-Classification

./: .gitignore  CIS_565_Final_Project.ipynb  CMakeLists.txt  NOTES.md  README.md
bookKeeping/: characterLosses.csv  mnistLosses.csv  xorLosses.csv
point_cloud_classification/: CMakeLists.txt  network.h  networkCPU.cu  networkCPU_old.cu  networkGPU.cu
point_cloud_classification/graph/: CMakeLists.txt  graph.cpp  graph.h  graphGPU.cu  graphKD.cpp
point_cloud_classification/hidden_layers/: CMakeLists.txt  RELUActivationLayer.h  RELUActivationLayerCPU.cu  RELUActivationLayerGPU.cu  crossEntropyLoss.h  crossEntropyLossCPU.cu  crossEntropyLossGPU.cu  dropoutLayer.h  dropoutLayerCPU.cu  dropoutLayerGPU.cu  fullyConnectedLayer.h  fullyConnectedLayerCPU.cu  fullyConnectedLayerGPU.cu  globalPoolingCPU.cu  globalPoolingGPU.cu  globalPoolingLayer.h  graphConvolutionLayer.h  graphConvolutionLayerCPU.cu  graphConvolutionLayerGPU.cu  layer.h  loss.h  sigmoidActivationLayer.h  sigmoidActivationLayerCPU.cu  sigmoidActivationLayerGPU.cu  softmaxActivationLayer.h  softmaxActivationLayerCPU.cu  softmaxActivationLayerGPU.cu
point_cloud_classification/layers/: CMakeLists.txt  RELUActivationLayer.h  crossEntropyLoss.h  fullyConnectedLayer.h  globalPoolingLayer.h  graphConvolutionLayer.h  layer.h  loss.h  sigmoidActivationLayer.h  softmaxActivationLayer.h
point_cloud_classification/layers/implementations/: CMakeLists.txt  RELUActivationLayerCPU.cu  RELUActivationLayerGPU.cu  crossEntropyLossCPU.cu  crossEntropyLossGPU.cu  fullyConnectedLayerCPU.cu  fullyConnectedLayerGPU.cu  globalPoolingCPU.cu  globalPoolingGPU.cu  graphConvolutionLayerCPU.cu  graphConvolutionLayerGPU.cu  sigmoidActivationLayerCPU.cu  sigmoidActivationLayerGPU.cu  softmaxActivationLayerCPU.cu  softmaxActivationLayerGPU.cu
point_cloud_classification/tests/: CMakeLists.txt  test.h
point_cloud_classification/utilities/: CMakeLists.txt  kernels.cu  kernels.h  matrix.h  matrixCPU.cu  matrixGPU.cu  parameters.cpp  parameters.h  utils.h
src/: kernel.cu  kernel.h  main.cpp  parameters.cpp  parameters.hpp  utilityCore.cpp  utilityCore.hpp  visualization.cpp  visualization.hpp
